# spark-operator-image-tool

./: .gitignore  .travis.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  main.py  radley.ascii  requirements.txt  setup.cfg  setup.py
docs/source/: checks.md  conf.py  index.md
soit/: main.py
