[metadata]
name = soit
version = 0.1
license = Apache-2
description-file = README.md
summary = a simple tool for verifying if a container image is compatible with Apache Spark operator for Kubernetes and OpenShift
homepage = https://github.com/Jiri-Kremser/spark-operator-image-tool
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

# [entry_points]
# console_scripts =
#     soit=soit.command_line:main