[metadata]
name = soit
version = 0.2.2
license = Apache-2
license-file= LICENSE
description-file = README.md
long_description_content_type = text/markdown; charset=UTF-8
summary = a simple tool for verifying if a container image is compatible with Apache Spark operator for Kubernetes and OpenShift
homepage = https://github.com/Jiri-Kremser/spark-operator-image-tool
url = https://github.com/Jiri-Kremser/spark-operator-image-tool
maintainer = Jiri Kremser
maintainer_email = foo@bar.com
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
python_requires = >=3

[options.entry_points]
console_scripts =
    soit=soit.main:check

[options.package_data]
* = radley.ascii
